# kimi-code-desktop

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  start.bat  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/workflows/: ci.yml  release.yml
docs/: DEVELOPMENT_STANDARD.md  RELEASE.md
scripts/: build-sidecar.ps1  check-runtime.ps1  desktop-release.ps1  release-msi.ps1  release-preflight.ps1  smoke-mcp-tool.mjs  smoke-skill.mjs  sync-version.js  validate-release-manifest.ps1
sidecar-adapter/kimi_desktop_sidecar/: __main__.py  api.py
sidecar-adapter/tests/: test_api_helpers.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  runtime_check.rs  sidecar.rs  tray.rs
src/components/: kimi-cli-brand.tsx
src/components/ui/: resizable.tsx  scroll-area.tsx
src/features/chat/: chat-workspace-container.tsx  chat.tsx  global-config-controls.tsx
src/features/chat/components/: chat-prompt-composer.tsx  chat-workspace-header.tsx  session-files-panel.tsx
src/features/sessions/: sessions.tsx
src/features/settings/: settings-dialog.test.tsx  settings-dialog.tsx
src/features/startup/: runtime-readiness-overlay.tsx
src/features/workbench/: workspace-panel.tsx
src/hooks/: use-theme.test.tsx  use-theme.ts  useGlobalConfig.ts  useSessionStream.ts  useSessions.test.tsx  useSessions.ts
src/lib/: auth.test.ts  i18n.test.tsx  i18n.tsx  kimi-code-link.test.ts  runtime-readiness.test.ts  runtime-readiness.ts  tauri-api.ts  utils.test.ts  version.test.ts  version.ts
(+3 files in other folders)
