[package]
name = "kimi-code-desktop"
version = "0.1.0"
description = "Kimi Code Desktop App"
authors = ["Kimi Team"]
license = "LicenseRef-Proprietary"
edition = "2021"
rust-version = "1.70"
build = "build.rs"

[lib]
name = "app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "kimi-code-desktop"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "net", "sync"] }
open = { version = "5", features = ["shellexecute-on-windows"] }


[target."cfg(windows)".dependencies]
windows = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
